--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="js/styles/style.css">
 </head>
 <body ng-controller="MainCtrl">
-	 <button type="button">CLICK ME!</button> 
+	<div class="menu">
+    	<ul>
+        <li><a href="#/"> Home </a></li>
+    	</ul>
+    </div>
 	<div class='boxed'>
 	 	mackay wins 6 loses 22
 	 	<P>sam wins 22 loses 6</P>
 	</div>
-
-
-
-
+	<div id="bracket-content">			
+		<textarea class="bracket-compose" placeholder=""/></textarea>
+	</div>
+	<button type="button">CLICK ME!</button> 
 
 
 
