making the profile view

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     	<ul>
         <li><a href="#/"> Home </a></li>
     	</ul>
+    	<ul>
+        <li><a href="#/"> profile </a></li>
+    	</ul>
     </div>
 	<div class='boxed'>
 	 	mackay wins 6 loses 22
