still not done with routing

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 <body ng-controller="MainCtrl">
 	<div class="menu">
     	<ul>
-        <li><a href="#/"> Home </a></li>
+        	<li><a href="#/"> Home </a></li>
     	</ul>
     	<ul>
-        <li><a href="#/"> profile </a></li>
+        	<li><a href="#/"> profile </a></li>
     	</ul>
     </div>
 	<div class='boxed'>
@@ -25,7 +25,10 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.27/angular-route.js"></script>
+
 <script src="js/app.js"></script>
+<script src='js/view/homeCtrl.js'></script>
 <script src="js/controllers/mainCtrl.js"></script>
 <script src="js/services/dataService.js"></script>
 
