add both scrips for profile view and login view

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.27/angular-route.js"></script>
 
 <script src="js/app.js"></script>
+<script type="js/view/login-register/loginCtrl.js"></script>
+<script type="js/view/profile/profileCtrl.js"></script>
 <script src='js/view/homeCtrl.js'></script>
 <script src="js/controllers/mainCtrl.js"></script>
 <script src="js/services/dataService.js"></script>
