made the rest of my views now just need to do the css

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     	<ul>
         	<li><a href="#/profile"> Profile </a></li>
     	</ul>
+    	<ul>
+        	<li><a href="#/login/register"> login </a></li>
+    	</ul>
     </div>
 	<div class='boxed'>
 	 	mackay wins 9 loses 24
@@ -29,8 +32,8 @@
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.27/angular-route.js"></script>
 
 <script src="js/app.js"></script>
-<script type="js/view/login-register/loginCtrl.js"></script>
-<script type="js/view/profile/profileCtrl.js"></script>
+<script src="js/view/login-register/loginCtrl.js"></script>
+<script src="js/view/profile/profileCtrl.js"></script>
 <script src='js/view/homeCtrl.js'></script>
 <script src="js/controllers/mainCtrl.js"></script>
 <script src="js/services/dataService.js"></script>
